--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ gcc-pex-future (12.2.0-0pexip1) pexip; urgency=medium
   * Build for arm64 too
   * Remove old patche 01-remove-format-diag, no longer needed.
   * Disable gcov for now, it doesn't link with our config
+  * Enable arm64
+  * Fix up build-deps and deps for arm64
 
  -- Steve McIntyre <steve.mcintyre@pexip.com>  Fri, 02 Dec 2022 11:48:42 +0000
 
