--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gcc-pex-future (12.2.0-0pexip2) pexip; urgency=medium
+
+  * Remove dependency on lib32gcc1, it's gone away
+
+ -- Steve McIntyre <steve.mcintyre@pexip.com>  Thi, 08 Dec 2022 11:58:54 +0000
+
 gcc-pex-future (12.2.0-0pexip1) pexip; urgency=medium
 
   * Switch to using gcc-12.2.0
