--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gcc-pex-future (12.2.0-0pexip4) pexip-bookworm; urgency=medium
+
+  * Bookworm build for product distribution
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Sat, 09 Dec 2023 22:52:29 +0000
+
 gcc-pex-future (12.2.0-0pexip3) pexip-bookworm; urgency=medium
 
   * Initial bookworm build
