--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gcc-pex-future (12.2.0-0+pexip24u5) pexip-bookworm; urgency=medium
+
+  * New versioning scheme
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 01 Feb 2024 15:58:26 +0000
+
 gcc-pex-future (12.2.0-0pexip4) pexip-bookworm; urgency=medium
 
   * Bookworm build for product distribution
